# quantum

./: .gitignore  Cargo.toml  Makefile  Makefile.in  Makefile.inc  Makefile32.inc  README.md  bnix.elf  bnix.sym  code_of_conduct.md  config.guess  config.status  config.sub  configure  configure.ac  copyright.md  debug.gdb  install-sh  license.md  link.ld  rust-toolchain.toml
arch/x86/include/asm/: io.h  limits.h  multiboot.h  processor.h  stddef.h  string.h  vga.h
arch/x86/kernel/: Makefile  entry.s  multiboot.c  multiboot.dep  string32.asm  string32.s  vga.c  vga.dep
config/: acx.m4  elf.m4
crates/arch-x86_64/: Cargo.toml
crates/arch-x86_64/src/: cpu.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: bitmap.rs  lib.rs
crates/hal/: Cargo.toml
crates/hal/src/: cpu.rs  lib.rs
crates/platform-pc/: Cargo.toml
crates/platform-pc/src/: lib.rs
docs/: spec.md
docs/design/: accounting.md  capabilities.md  hal_surface.md  ipc.md  memory_objects.md  tasks_and_scheduling.md
include/belnix/: processor.h  stdarg.h  stddef.h  stdio.h  string.h
include/bnix/: config.h  processor.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h
include/quantum/: config.h  processor.h  stddef.h  stdlib.h  string.h
kernel/: Makefile  main.c  main.dep
libkern/: printf.c  umoddi3.c
libkernel/: Makefile  divdi3.dep  moddi3.c  moddi3.dep  printf.c  printf.dep  qdivrem.c  qdivrem.dep  quad.h  stdio.c  stdio.dep  string.c  string.dep  udivdi3.c  udivdi3.dep  udivmoddi4.c  udivmoddi4.dep  umoddi3.c  umoddi3.dep
src/arch/x86/include/asm/: limits.h  processor.h  string.h
src/arch/x86/kernel/: multiboot.c  string32.s
src/include/bnix/: config.h  config.h.in  processor.h  stdarg.h  stddef.h  stdlib.h
src/kernel/: main.c
src/libkernel/: Makefile  printf.c  qdivrem.c  quad.h  string.c  udivdi3.c
src/system/kernel/: Makefile  Makefile.inc
src/system/kernel/arch/x86/: Makefile  entry.asm  multiboot.c  string32.asm  vga.c
src/system/kernel/core/: Makefile  main.c
src/system/kernel/include/quantum/: config.h  cpu.h  errno.h  processor.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h  tasks.h
src/system/kernel/lib/: Makefile  qdivrem.c  quad.h  stdio.c  udivdi3.c  umoddi3.c
sys/arch/x86/kernel/: entry.s  multiboot.c  vga.c
sys/kernel/: main.c
sys/libkern/: divdi3.c  printf.c  qdivrem.c  quad.h  stdio.c  string.c  udivdi3.c  umoddi3.c
sys/x86/include/asm/: io.h  multiboot.h
sys/x86/kernel/: entry.s  string32.s  vga.c
(+10 files in other folders)
