[workspace]
resolver = "3"
members = [
    "crates/hal",
    "crates/core",
    "crates/arch-x86_64",
    "crates/platform-pc",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
authors = ["bbelna <bbelna@aol.com>"]
license-file = "license.md"
repository = "https://github.com/bbelna/quantum"
publish = false

[workspace.lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
module_name_repetitions = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = "line-tables-only"
strip = "debuginfo"

[profile.dev]
opt-level = 1
panic = "abort"
