[package]
name = "quantum-arch-x86_64"
description = "x86_64 implementation of the Quantum kernel HAL contracts."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
quantum-hal = { path = "../hal" }

[lints]
workspace = true
