[package]
name = "quantum-platform-pc"
description = "PC-class platform glue (ACPI, legacy I/O, IRQ wiring) for the Quantum kernel."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
quantum-hal = { path = "../hal" }

[lints]
workspace = true
